[package]
name = "openconstruct-kernel"
version = "0.1.0"
edition = "2021"
description = "The actual kernel that ties ForgeFlux metabolism to hardware — same kernel, every scale."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
